[package]
name = "usbblaster-rs"
version = "0.1.0"
authors = ["Sameer Puri <sameer@users.noreply.github.com>"]
edition = "2018"

[profile.release]
opt-level = 'z'  # Optimize for size.
lto = true
codegen-units = 1

[dependencies]
usbd-serial = "~0.1"
cortex-m = "*"
cortex-m-rt = "*"

[dependencies.arduino_mkrvidor4000]
version = "~0.1"
path = "../atsamd/boards/arduino_mkrvidor4000"
features = ["default", "usb"]
