[package]
name = "usbblaster-rs"
version = "0.1.0"
authors = ["Sameer Puri <sameer@users.noreply.github.com>"]
edition = "2018"

[profile.release]
# opt-level = 'z'
lto = true
codegen-units = 1

[dependencies]
cortex-m = "*"
cortex-m-rt = "*"

[dependencies.arrayvec]
version = "~0.5.1"
default-features = false

[dependencies.arduino_mkrvidor4000]
version = "~0.1"
git = "https://github.com/sameer/atsamd.git"
features = ["default", "usb", "unproven"]
