[package]
name = "usbd-blaster"
version = "0.1.3"
authors = ["Sameer Puri <purisame@spuri.io>"]
edition = "2018"
keywords = ["no-std", "usb-device", "blaster", "jtag", "ftdi"]
categories = ["embedded", "no-std"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/sameer/usbd-blaster"
documentation = "https://docs.rs/usbd-blaster"
description = "USB Blaster for Embedded Devices"
readme = "README.md"

[badges]
is-it-maintained-issue-resolution = { repository = "sameer/usbd-blaster" }
is-it-maintained-open-issues = { repository = "sameer/usbd-blaster" }
maintenance = { status = "passively-maintained" }

[dependencies]
usb-device = "~0.2"
embedded-hal = "~0.2"

[dev-dependencies]
cortex-m-rt = "0.6"

[dev-dependencies.arduino_mkrvidor4000]
version = "~0.1"
features = ["default", "usb", "unproven"]
